project2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> smt
Rule 1     smt -> print_smt
Rule 2     print_smt -> PRINT LPAREN expression RPAREN SEMI
Rule 3     expression -> LBRACE inblock RBRACE LBRACE factor RBRACE
Rule 4     inblock -> expression COMMA inblock
Rule 5     expression -> expression LBRACE factor RBRACE
Rule 6     inblock -> LBRACE inblock RBRACE
Rule 7     inblock -> smt inblock
Rule 8     inblock -> expression
Rule 9     expression -> expression PLUS expression
Rule 10    expression -> expression MINUS expression
Rule 11    expression -> expression TIMES expression
Rule 12    expression -> expression DIVIDE expression
Rule 13    expression -> expression POWER expression
Rule 14    expression -> expression MODULUS expression
Rule 15    expression -> expression FLOOR expression
Rule 16    expression -> expression LESS expression
Rule 17    expression -> expression GREAT expression
Rule 18    expression -> expression LESSEQU expression
Rule 19    expression -> expression GREATEQU expression
Rule 20    expression -> expression EQU expression
Rule 21    expression -> expression NOTEQU expression
Rule 22    expression -> expression AND expression
Rule 23    expression -> expression OR expression
Rule 24    expression -> expression NOT expression
Rule 25    expression -> expression IN expression
Rule 26    expression -> NOT expression
Rule 27    expression -> MINUS expression
Rule 28    expression -> factor
Rule 29    factor -> NUMBER
Rule 30    factor -> BOOLEAN
Rule 31    factor -> STRING
Rule 32    expression -> LPAREN expression RPAREN

Terminals, with rules where they appear

AND                  : 22
BOOLEAN              : 30
COMMA                : 4
DIVIDE               : 12
EQU                  : 20
FLOOR                : 15
GREAT                : 17
GREATEQU             : 19
IN                   : 25
LBRACE               : 3 3 5 6
LESS                 : 16
LESSEQU              : 18
LPAREN               : 2 32
MINUS                : 10 27
MODULUS              : 14
NOT                  : 24 26
NOTEQU               : 21
NUMBER               : 29
OR                   : 23
PLUS                 : 9
POWER                : 13
PRINT                : 2
RBRACE               : 3 3 5 6
RPAREN               : 2 32
SEMI                 : 2
STRING               : 31
TIMES                : 11
error                : 

Nonterminals, with rules where they appear

expression           : 2 4 5 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 27 32
factor               : 3 5 28
inblock              : 3 4 6 7
print_smt            : 1
smt                  : 7 0

Parsing method: LALR

state 0

    (0) S' -> . smt
    (1) smt -> . print_smt
    (2) print_smt -> . PRINT LPAREN expression RPAREN SEMI

    PRINT           shift and go to state 3

    smt                            shift and go to state 1
    print_smt                      shift and go to state 2

state 1

    (0) S' -> smt .



state 2

    (1) smt -> print_smt .

    $end            reduce using rule 1 (smt -> print_smt .)
    LBRACE          reduce using rule 1 (smt -> print_smt .)
    NOT             reduce using rule 1 (smt -> print_smt .)
    MINUS           reduce using rule 1 (smt -> print_smt .)
    LPAREN          reduce using rule 1 (smt -> print_smt .)
    NUMBER          reduce using rule 1 (smt -> print_smt .)
    BOOLEAN         reduce using rule 1 (smt -> print_smt .)
    STRING          reduce using rule 1 (smt -> print_smt .)
    PRINT           reduce using rule 1 (smt -> print_smt .)


state 3

    (2) print_smt -> PRINT . LPAREN expression RPAREN SEMI

    LPAREN          shift and go to state 4


state 4

    (2) print_smt -> PRINT LPAREN . expression RPAREN SEMI
    (3) expression -> . LBRACE inblock RBRACE LBRACE factor RBRACE
    (5) expression -> . expression LBRACE factor RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MODULUS expression
    (15) expression -> . expression FLOOR expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREAT expression
    (18) expression -> . expression LESSEQU expression
    (19) expression -> . expression GREATEQU expression
    (20) expression -> . expression EQU expression
    (21) expression -> . expression NOTEQU expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression NOT expression
    (25) expression -> . expression IN expression
    (26) expression -> . NOT expression
    (27) expression -> . MINUS expression
    (28) expression -> . factor
    (32) expression -> . LPAREN expression RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . BOOLEAN
    (31) factor -> . STRING

    LBRACE          shift and go to state 7
    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 11
    BOOLEAN         shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 6
    factor                         shift and go to state 8

state 5

    (32) expression -> LPAREN . expression RPAREN
    (3) expression -> . LBRACE inblock RBRACE LBRACE factor RBRACE
    (5) expression -> . expression LBRACE factor RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MODULUS expression
    (15) expression -> . expression FLOOR expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREAT expression
    (18) expression -> . expression LESSEQU expression
    (19) expression -> . expression GREATEQU expression
    (20) expression -> . expression EQU expression
    (21) expression -> . expression NOTEQU expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression NOT expression
    (25) expression -> . expression IN expression
    (26) expression -> . NOT expression
    (27) expression -> . MINUS expression
    (28) expression -> . factor
    (32) expression -> . LPAREN expression RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . BOOLEAN
    (31) factor -> . STRING

    LBRACE          shift and go to state 7
    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 11
    BOOLEAN         shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 14
    factor                         shift and go to state 8

state 6

    (2) print_smt -> PRINT LPAREN expression . RPAREN SEMI
    (5) expression -> expression . LBRACE factor RBRACE
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . POWER expression
    (14) expression -> expression . MODULUS expression
    (15) expression -> expression . FLOOR expression
    (16) expression -> expression . LESS expression
    (17) expression -> expression . GREAT expression
    (18) expression -> expression . LESSEQU expression
    (19) expression -> expression . GREATEQU expression
    (20) expression -> expression . EQU expression
    (21) expression -> expression . NOTEQU expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . NOT expression
    (25) expression -> expression . IN expression

    RPAREN          shift and go to state 15
    LBRACE          shift and go to state 16
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    TIMES           shift and go to state 19
    DIVIDE          shift and go to state 20
    POWER           shift and go to state 21
    MODULUS         shift and go to state 22
    FLOOR           shift and go to state 23
    LESS            shift and go to state 24
    GREAT           shift and go to state 25
    LESSEQU         shift and go to state 26
    GREATEQU        shift and go to state 27
    EQU             shift and go to state 28
    NOTEQU          shift and go to state 29
    AND             shift and go to state 30
    OR              shift and go to state 31
    NOT             shift and go to state 32
    IN              shift and go to state 33


state 7

    (3) expression -> LBRACE . inblock RBRACE LBRACE factor RBRACE
    (4) inblock -> . expression COMMA inblock
    (6) inblock -> . LBRACE inblock RBRACE
    (7) inblock -> . smt inblock
    (8) inblock -> . expression
    (3) expression -> . LBRACE inblock RBRACE LBRACE factor RBRACE
    (5) expression -> . expression LBRACE factor RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MODULUS expression
    (15) expression -> . expression FLOOR expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREAT expression
    (18) expression -> . expression LESSEQU expression
    (19) expression -> . expression GREATEQU expression
    (20) expression -> . expression EQU expression
    (21) expression -> . expression NOTEQU expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression NOT expression
    (25) expression -> . expression IN expression
    (26) expression -> . NOT expression
    (27) expression -> . MINUS expression
    (28) expression -> . factor
    (32) expression -> . LPAREN expression RPAREN
    (1) smt -> . print_smt
    (29) factor -> . NUMBER
    (30) factor -> . BOOLEAN
    (31) factor -> . STRING
    (2) print_smt -> . PRINT LPAREN expression RPAREN SEMI

    LBRACE          shift and go to state 34
    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 11
    BOOLEAN         shift and go to state 12
    STRING          shift and go to state 13
    PRINT           shift and go to state 3

    inblock                        shift and go to state 35
    factor                         shift and go to state 8
    expression                     shift and go to state 36
    smt                            shift and go to state 37
    print_smt                      shift and go to state 2

state 8

    (28) expression -> factor .

    RPAREN          reduce using rule 28 (expression -> factor .)
    LBRACE          reduce using rule 28 (expression -> factor .)
    PLUS            reduce using rule 28 (expression -> factor .)
    MINUS           reduce using rule 28 (expression -> factor .)
    TIMES           reduce using rule 28 (expression -> factor .)
    DIVIDE          reduce using rule 28 (expression -> factor .)
    POWER           reduce using rule 28 (expression -> factor .)
    MODULUS         reduce using rule 28 (expression -> factor .)
    FLOOR           reduce using rule 28 (expression -> factor .)
    LESS            reduce using rule 28 (expression -> factor .)
    GREAT           reduce using rule 28 (expression -> factor .)
    LESSEQU         reduce using rule 28 (expression -> factor .)
    GREATEQU        reduce using rule 28 (expression -> factor .)
    EQU             reduce using rule 28 (expression -> factor .)
    NOTEQU          reduce using rule 28 (expression -> factor .)
    AND             reduce using rule 28 (expression -> factor .)
    OR              reduce using rule 28 (expression -> factor .)
    NOT             reduce using rule 28 (expression -> factor .)
    IN              reduce using rule 28 (expression -> factor .)
    COMMA           reduce using rule 28 (expression -> factor .)
    RBRACE          reduce using rule 28 (expression -> factor .)


state 9

    (27) expression -> MINUS . expression
    (3) expression -> . LBRACE inblock RBRACE LBRACE factor RBRACE
    (5) expression -> . expression LBRACE factor RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MODULUS expression
    (15) expression -> . expression FLOOR expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREAT expression
    (18) expression -> . expression LESSEQU expression
    (19) expression -> . expression GREATEQU expression
    (20) expression -> . expression EQU expression
    (21) expression -> . expression NOTEQU expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression NOT expression
    (25) expression -> . expression IN expression
    (26) expression -> . NOT expression
    (27) expression -> . MINUS expression
    (28) expression -> . factor
    (32) expression -> . LPAREN expression RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . BOOLEAN
    (31) factor -> . STRING

    LBRACE          shift and go to state 7
    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 11
    BOOLEAN         shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 38
    factor                         shift and go to state 8

state 10

    (26) expression -> NOT . expression
    (3) expression -> . LBRACE inblock RBRACE LBRACE factor RBRACE
    (5) expression -> . expression LBRACE factor RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MODULUS expression
    (15) expression -> . expression FLOOR expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREAT expression
    (18) expression -> . expression LESSEQU expression
    (19) expression -> . expression GREATEQU expression
    (20) expression -> . expression EQU expression
    (21) expression -> . expression NOTEQU expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression NOT expression
    (25) expression -> . expression IN expression
    (26) expression -> . NOT expression
    (27) expression -> . MINUS expression
    (28) expression -> . factor
    (32) expression -> . LPAREN expression RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . BOOLEAN
    (31) factor -> . STRING

    LBRACE          shift and go to state 7
    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 11
    BOOLEAN         shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 39
    factor                         shift and go to state 8

state 11

    (29) factor -> NUMBER .

    RPAREN          reduce using rule 29 (factor -> NUMBER .)
    LBRACE          reduce using rule 29 (factor -> NUMBER .)
    PLUS            reduce using rule 29 (factor -> NUMBER .)
    MINUS           reduce using rule 29 (factor -> NUMBER .)
    TIMES           reduce using rule 29 (factor -> NUMBER .)
    DIVIDE          reduce using rule 29 (factor -> NUMBER .)
    POWER           reduce using rule 29 (factor -> NUMBER .)
    MODULUS         reduce using rule 29 (factor -> NUMBER .)
    FLOOR           reduce using rule 29 (factor -> NUMBER .)
    LESS            reduce using rule 29 (factor -> NUMBER .)
    GREAT           reduce using rule 29 (factor -> NUMBER .)
    LESSEQU         reduce using rule 29 (factor -> NUMBER .)
    GREATEQU        reduce using rule 29 (factor -> NUMBER .)
    EQU             reduce using rule 29 (factor -> NUMBER .)
    NOTEQU          reduce using rule 29 (factor -> NUMBER .)
    AND             reduce using rule 29 (factor -> NUMBER .)
    OR              reduce using rule 29 (factor -> NUMBER .)
    NOT             reduce using rule 29 (factor -> NUMBER .)
    IN              reduce using rule 29 (factor -> NUMBER .)
    COMMA           reduce using rule 29 (factor -> NUMBER .)
    RBRACE          reduce using rule 29 (factor -> NUMBER .)


state 12

    (30) factor -> BOOLEAN .

    RPAREN          reduce using rule 30 (factor -> BOOLEAN .)
    LBRACE          reduce using rule 30 (factor -> BOOLEAN .)
    PLUS            reduce using rule 30 (factor -> BOOLEAN .)
    MINUS           reduce using rule 30 (factor -> BOOLEAN .)
    TIMES           reduce using rule 30 (factor -> BOOLEAN .)
    DIVIDE          reduce using rule 30 (factor -> BOOLEAN .)
    POWER           reduce using rule 30 (factor -> BOOLEAN .)
    MODULUS         reduce using rule 30 (factor -> BOOLEAN .)
    FLOOR           reduce using rule 30 (factor -> BOOLEAN .)
    LESS            reduce using rule 30 (factor -> BOOLEAN .)
    GREAT           reduce using rule 30 (factor -> BOOLEAN .)
    LESSEQU         reduce using rule 30 (factor -> BOOLEAN .)
    GREATEQU        reduce using rule 30 (factor -> BOOLEAN .)
    EQU             reduce using rule 30 (factor -> BOOLEAN .)
    NOTEQU          reduce using rule 30 (factor -> BOOLEAN .)
    AND             reduce using rule 30 (factor -> BOOLEAN .)
    OR              reduce using rule 30 (factor -> BOOLEAN .)
    NOT             reduce using rule 30 (factor -> BOOLEAN .)
    IN              reduce using rule 30 (factor -> BOOLEAN .)
    COMMA           reduce using rule 30 (factor -> BOOLEAN .)
    RBRACE          reduce using rule 30 (factor -> BOOLEAN .)


state 13

    (31) factor -> STRING .

    RPAREN          reduce using rule 31 (factor -> STRING .)
    LBRACE          reduce using rule 31 (factor -> STRING .)
    PLUS            reduce using rule 31 (factor -> STRING .)
    MINUS           reduce using rule 31 (factor -> STRING .)
    TIMES           reduce using rule 31 (factor -> STRING .)
    DIVIDE          reduce using rule 31 (factor -> STRING .)
    POWER           reduce using rule 31 (factor -> STRING .)
    MODULUS         reduce using rule 31 (factor -> STRING .)
    FLOOR           reduce using rule 31 (factor -> STRING .)
    LESS            reduce using rule 31 (factor -> STRING .)
    GREAT           reduce using rule 31 (factor -> STRING .)
    LESSEQU         reduce using rule 31 (factor -> STRING .)
    GREATEQU        reduce using rule 31 (factor -> STRING .)
    EQU             reduce using rule 31 (factor -> STRING .)
    NOTEQU          reduce using rule 31 (factor -> STRING .)
    AND             reduce using rule 31 (factor -> STRING .)
    OR              reduce using rule 31 (factor -> STRING .)
    NOT             reduce using rule 31 (factor -> STRING .)
    IN              reduce using rule 31 (factor -> STRING .)
    COMMA           reduce using rule 31 (factor -> STRING .)
    RBRACE          reduce using rule 31 (factor -> STRING .)


state 14

    (32) expression -> LPAREN expression . RPAREN
    (5) expression -> expression . LBRACE factor RBRACE
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . POWER expression
    (14) expression -> expression . MODULUS expression
    (15) expression -> expression . FLOOR expression
    (16) expression -> expression . LESS expression
    (17) expression -> expression . GREAT expression
    (18) expression -> expression . LESSEQU expression
    (19) expression -> expression . GREATEQU expression
    (20) expression -> expression . EQU expression
    (21) expression -> expression . NOTEQU expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . NOT expression
    (25) expression -> expression . IN expression

    RPAREN          shift and go to state 40
    LBRACE          shift and go to state 16
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    TIMES           shift and go to state 19
    DIVIDE          shift and go to state 20
    POWER           shift and go to state 21
    MODULUS         shift and go to state 22
    FLOOR           shift and go to state 23
    LESS            shift and go to state 24
    GREAT           shift and go to state 25
    LESSEQU         shift and go to state 26
    GREATEQU        shift and go to state 27
    EQU             shift and go to state 28
    NOTEQU          shift and go to state 29
    AND             shift and go to state 30
    OR              shift and go to state 31
    NOT             shift and go to state 32
    IN              shift and go to state 33


state 15

    (2) print_smt -> PRINT LPAREN expression RPAREN . SEMI

    SEMI            shift and go to state 41


state 16

    (5) expression -> expression LBRACE . factor RBRACE
    (29) factor -> . NUMBER
    (30) factor -> . BOOLEAN
    (31) factor -> . STRING

    NUMBER          shift and go to state 11
    BOOLEAN         shift and go to state 12
    STRING          shift and go to state 13

    factor                         shift and go to state 42

state 17

    (9) expression -> expression PLUS . expression
    (3) expression -> . LBRACE inblock RBRACE LBRACE factor RBRACE
    (5) expression -> . expression LBRACE factor RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MODULUS expression
    (15) expression -> . expression FLOOR expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREAT expression
    (18) expression -> . expression LESSEQU expression
    (19) expression -> . expression GREATEQU expression
    (20) expression -> . expression EQU expression
    (21) expression -> . expression NOTEQU expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression NOT expression
    (25) expression -> . expression IN expression
    (26) expression -> . NOT expression
    (27) expression -> . MINUS expression
    (28) expression -> . factor
    (32) expression -> . LPAREN expression RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . BOOLEAN
    (31) factor -> . STRING

    LBRACE          shift and go to state 7
    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 11
    BOOLEAN         shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 43
    factor                         shift and go to state 8

state 18

    (10) expression -> expression MINUS . expression
    (3) expression -> . LBRACE inblock RBRACE LBRACE factor RBRACE
    (5) expression -> . expression LBRACE factor RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MODULUS expression
    (15) expression -> . expression FLOOR expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREAT expression
    (18) expression -> . expression LESSEQU expression
    (19) expression -> . expression GREATEQU expression
    (20) expression -> . expression EQU expression
    (21) expression -> . expression NOTEQU expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression NOT expression
    (25) expression -> . expression IN expression
    (26) expression -> . NOT expression
    (27) expression -> . MINUS expression
    (28) expression -> . factor
    (32) expression -> . LPAREN expression RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . BOOLEAN
    (31) factor -> . STRING

    LBRACE          shift and go to state 7
    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 11
    BOOLEAN         shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 44
    factor                         shift and go to state 8

state 19

    (11) expression -> expression TIMES . expression
    (3) expression -> . LBRACE inblock RBRACE LBRACE factor RBRACE
    (5) expression -> . expression LBRACE factor RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MODULUS expression
    (15) expression -> . expression FLOOR expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREAT expression
    (18) expression -> . expression LESSEQU expression
    (19) expression -> . expression GREATEQU expression
    (20) expression -> . expression EQU expression
    (21) expression -> . expression NOTEQU expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression NOT expression
    (25) expression -> . expression IN expression
    (26) expression -> . NOT expression
    (27) expression -> . MINUS expression
    (28) expression -> . factor
    (32) expression -> . LPAREN expression RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . BOOLEAN
    (31) factor -> . STRING

    LBRACE          shift and go to state 7
    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 11
    BOOLEAN         shift and go to state 12
    STRING          shift and go to state 13
